pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec__115-indented_code_blocks.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 159
expression: "replace_system_specific_urls(render_to_string(markdown_file,\n&iterm2_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/115-indented_code_blocks.md
---
]1337;SetMark\[1m[34m┄[0m[1m[34mHeading[0m

[32m────────────────────[0m
[33mfoo
[0m[32m────────────────────[0m

]1337;SetMark\[1m[34m┄┄[0m[1m[34mHeading[0m

[32m────────────────────[0m
[33mfoo
[0m[32m────────────────────[0m

[32m════════════════════════════════════════════════════════════════════════════════[0m
